Completed desktop version of project

--- a/index.html
+++ b/index.html
@@ -2,38 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./images/logo.ico">
+  <title>Snap Intro Section</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
+  <header class="header">
+    <nav class="navbar">
+      <ul class="navbar-menu">
+        <li class="navbar-menu__brand">
+          <img src="./images/logo.svg" alt="Brand Logo" class="logo">
+        </li>
+        <li class="navbar-menu__item">
+          <span class="navbar-menu__dropdown">Features</span>
+          <ul class="navbar-dropdown navbar-dropdown--right">
+            <li class="navbar-dropdown__item">
+              <img src="./images/icon-todo.svg" alt="Todo list" class="icon">
+              Todo List
+            </li>
+            <li class="navbar-dropdown__item">
+              <img src="./images/icon-calendar.svg" alt="Calendar" class="icon">
+              Calendar
+            </li>
+            <li class="navbar-dropdown__item">
+              <img src="./images/icon-reminders.svg" alt="Reminders" class="icon">
+              Reminders
+            </li>
+            <li class="navbar-dropdown__item">
+              <img src="./images/icon-planning.svg" alt="Planning" class="icon">
+              Planning
+            </li>
+          </ul>
+        </li>
+        <li class="navbar-menu__item">
+          <span class="navbar-menu__dropdown">Company</span>
+          <ul class="navbar-dropdown">
+            <li class="navbar-dropdown__item">History</li>
+            <li class="navbar-dropdown__item">Our Team</li>
+            <li class="navbar-dropdown__item">Blog</li>
+          </ul>
+        </li>
+        <li class="navbar-menu__item">
+          Careers
+        </li>
+        <li class="navbar-menu__item">
+          About
+        </li>
+      </ul>
+      <ul class="navbar-menu-user">
+        <li>
+          <button class="btn-flat">Login</button>
+        </li>
+        <li>
+          <button class="btn-primary">Register</button>
+        </li>
+      </ul>
+    </nav>
+  </header>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div class="intro-arena">
+      <div class="info">
+        <h1 class="info__title">Make remote work</h1>
+        <p class="info__para">Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
+        <button class="btn-primary btn-primary--dark">Learn more</button>
+        <div class="info__client">
+          <img src="./images/client-databiz.svg" alt="Client Logo" class="logo-1">
+          <img src="./images/client-audiophile.svg" alt="Client Logo" class="logo-2">
+          <img src="./images/client-meet.svg" alt="Client Logo" class="logo-3">
+          <img src="./images/client-maker.svg" alt="Client Logo" class="logo-4">
+        </div>
+      </div>
+      <div class="intro-image">
+        <img src="./images/image-hero-desktop.png" alt="Desktop" class="image">
+      </div>
+    </div>
+  </main>
 </body>
 </html>
